# crypi

./: .gitignore  CMakeLists.txt  README.md  clean.py
BFV/: CMakeLists.txt  bfv.cpp  bfv.hh
data/: accounts.txt  candidates.txt  secret_key.txt  style.css  vote_count.txt  voted.txt  votes.txt
math/: CMakeLists.txt  math.hh  matrix.cpp  matrix.hh  vector.cpp  vector.hh
src/: CMakeLists.txt  config.json  main.cpp
src/BFV/: bfv.cpp  bfv.hh
src/tests/: BFV_tests.cpp  BFV_tests.hh  CMakeLists.txt  Tester.cpp  Tester.hh
src/utils/: CMakeLists.txt  basics.hh  candidates.cpp  file.cpp  file.hh  jsonLib.cpp  jsonLib.hh  utils.hh
src/webserver/: CMakeLists.txt  evote.cpp  evote.hh  home_page.cpp  home_page.hh  login.cpp  login.hh  tools.cpp  tools.hh  vote_page.cpp  vote_page.hh  webserver.hh
subfolder/: CMakeLists.txt  subfunc.cpp  subfunc.hh
utils/: CMakeLists.txt  basics.hh  file.cpp  file.hh
